--- a/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
+++ b/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
@@ -6,6 +6,7 @@
 
         <import type="androidx.lifecycle.LiveData"/>
         <import type="com.tangpj.recurve.resource.Resource"/>
+        <import type="com.tangpj.recurve.resource.NetworkState"/>
         <import type="kotlin.Unit"/>
         <import type="kotlin.jvm.functions.Function0"/>
 
@@ -33,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_gravity="center"
             app:resource="@{(Resource) resource}"
+            app:state="@{(NetworkState) resource.networkState}"
             app:callback="@{() -> retryCallback.invoke()}"/>
 
     </FrameLayout>
