--- a/baselib/github_base/src/main/res/layout/page_loading_state.xml
+++ b/baselib/github_base/src/main/res/layout/page_loading_state.xml
@@ -1,42 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (C) 2017 The Android Open Source Project
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="com.tangpj.recurve.resource.NetworkState"/>
-        <import type="com.tangpj.recurve.resource.Resource"/>
+        <import type="com.tangpj.paging.PageLoadState"/>
         <import type="com.tangpj.recurve.resource.Status"/>
+        <import type="androidx.paging.PagedList"/>
         <import type="kotlin.Unit"/>
         <import type="kotlin.jvm.functions.Function0"/>
 
-        <variable name="state" type="NetworkState"/>
-        <variable name="resource" type="Resource"/>
+        <variable name="pagedList" type="PagedList"/>
+        <variable name="state" type="PageLoadState"/>
         <variable name="callback" type="Function0&lt;Unit>"/>
     </data>
     <LinearLayout android:orientation="vertical"
-        app:visibleGone="@{resource.data == null}"
+        app:visibleGone="@{pagedList.size() == 0}"
         android:layout_width="wrap_content"
         android:gravity="center"
         android:padding="@dimen/padding_horizontal_material"
         android:layout_height="wrap_content">
         <ProgressBar
-            app:visibleGone="@{state.status == Status.LOADING}"
+            app:visibleGone="@{state.networkState.status == Status.LOADING}"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,12 +31,12 @@
             android:text="@string/retry"
             android:id="@+id/retry"
             android:onClick="@{() -> callback.invoke()}"
-            app:visibleGone="@{state.status == Status.ERROR}"/>
+            app:visibleGone="@{state.networkState.status == Status.ERROR}"/>
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/error_msg"
-            android:text="@{state.msg ?? @string/unknown_error}"
-            app:visibleGone="@{state.status == Status.ERROR}"
+            android:text="@{state.networkState.msg ?? @string/unknown_error}"
+            app:visibleGone="@{state.networkState.status == Status.ERROR}"
             tools:visibility="visible"/>
     </LinearLayout>
 </layout>
