--- a/baselib/github_base/src/main/res/layout/page_loading_state.xml
+++ b/baselib/github_base/src/main/res/layout/page_loading_state.xml
@@ -3,24 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
+        <import type="com.tangpj.recurve.resource.Resource"/>
         <import type="com.tangpj.paging.PageLoadState"/>
+        <import type="com.tangpj.recurve.resource.NetworkState"/>
         <import type="com.tangpj.recurve.resource.Status"/>
         <import type="androidx.paging.PagedList"/>
         <import type="kotlin.Unit"/>
         <import type="kotlin.jvm.functions.Function0"/>
 
-        <variable name="pagedList" type="PagedList"/>
-        <variable name="state" type="PageLoadState"/>
+        <variable name="resource" type="Resource"/>
+        <variable name="state" type="NetworkState"/>
         <variable name="callback" type="Function0&lt;Unit>"/>
     </data>
     <LinearLayout android:orientation="vertical"
-        app:visibleGone="@{pagedList.size() == 0}"
+        app:visibleGone="@{resource.data == null}"
         android:layout_width="wrap_content"
         android:gravity="center"
         android:padding="@dimen/padding_horizontal_material"
         android:layout_height="wrap_content">
         <ProgressBar
-            app:visibleGone="@{state.networkState.status == Status.LOADING}"
+            app:visibleGone="@{state.status == Status.LOADING}"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,12 +33,12 @@
             android:text="@string/retry"
             android:id="@+id/retry"
             android:onClick="@{() -> callback.invoke()}"
-            app:visibleGone="@{state.networkState.status == Status.ERROR}"/>
+            app:visibleGone="@{state.status == Status.ERROR}"/>
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/error_msg"
-            android:text="@{state.networkState.msg ?? @string/unknown_error}"
-            app:visibleGone="@{state.networkState.status == Status.ERROR}"
+            android:text="@{state.msg ?? @string/unknown_error}"
+            app:visibleGone="@{state.status == Status.ERROR}"
             tools:visibility="visible"/>
     </LinearLayout>
 </layout>
