--- a/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
+++ b/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
@@ -21,7 +21,7 @@
 
         <variable
             name="retryCallback"
-            type="Function0&lt;Unit>"/>
+            type="LiveData&lt;Function0&lt;Unit>>"/>
 
     </data>
 
