--- a/baselib/github_base/src/main/res/layout/item_load_state.xml
+++ b/baselib/github_base/src/main/res/layout/item_load_state.xml
@@ -20,18 +20,17 @@
     <data>
 
         <import type="kotlin.jvm.functions.Function0"/>
-        <import type="androidx.lifecycle.LiveData"/>
         <import type="kotlin.Unit"/>
         <import type="com.tangpj.recurve.resource.NetworkState"/>
         <import type="com.tangpj.recurve.resource.Status"/>
 
         <variable
             name="networkState"
-            type="LiveData&lt;NetworkState>" />
+            type="NetworkState" />
 
         <variable
             name="retryCallback"
-            type="LiveData&lt;Function0&lt;Unit>>"/>
+            type="Function0&lt;Unit>"/>
     </data>
 
     <LinearLayout
