add 600dp item_repository

--- a/modules/repository/src/main/res/layout-sw600dp/item_repository.xml
+++ b/modules/repository/src/main/res/layout-sw600dp/item_repository.xml
@@ -14,8 +14,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="@dimen/elevation_material"
-        android:layout_marginBottom="@dimen/margin_vertical_material"
+        android:elevation="@dimen/single_elevation_material"
+        android:layout_marginBottom="@dimen/single_margin_vertical_material"
         android:layout_marginStart="@dimen/margin_vertical_material"
         android:layout_marginEnd="@dimen/margin_vertical_material"
         android:orientation="vertical">
@@ -26,14 +26,14 @@
 
             <TextView
                 android:id="@+id/tv_repository_title"
-                style="@style/TextAppearance.Adaptive.Headline5"
+                style="@style/TextAppearance.AppCompat.Headline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_horizontal_material"
-                android:layout_marginLeft="@dimen/margin_horizontal_material"
-                android:layout_marginTop="@dimen/margin_vertical_material"
-                android:layout_marginEnd="@dimen/margin_horizontal_material"
-                android:layout_marginRight="@dimen/margin_horizontal_material"
+                android:layout_marginStart="@dimen/single_margin_horizontal_material"
+                android:layout_marginLeft="@dimen/single_margin_horizontal_material"
+                android:layout_marginTop="@dimen/single_margin_vertical_material"
+                android:layout_marginEnd="@dimen/single_margin_horizontal_material"
+                android:layout_marginRight="@dimen/single_margin_horizontal_material"
                 android:textColor="@color/textColor"
                 android:text="@{repoVo.fullName}"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,11 +43,11 @@
 
             <TextView
                 android:id="@+id/tv_repository_desc"
-                style="@style/TextAppearance.Adaptive.Body2"
+                style="@style/TextAppearance.AppCompat.Body2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_vertical_material"
-                android:layout_marginEnd="@dimen/margin_horizontal_material"
+                android:layout_marginTop="@dimen/single_margin_vertical_material"
+                android:layout_marginEnd="@dimen/single_margin_horizontal_material"
                 android:lines="5"
                 android:ellipsize="end"
                 android:textColor="@color/textColorLight"
@@ -61,8 +61,8 @@
                 android:id="@+id/tv_repository_language"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_vertical_material"
-                android:layout_marginBottom="@dimen/margin_vertical_material"
+                android:layout_marginTop="@dimen/single_margin_vertical_material"
+                android:layout_marginBottom="@dimen/single_margin_vertical_material"
                 android:drawableStart="@mipmap/ic_star_rate_black_18dp"
                 android:text="@{repoVo.language}"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -75,9 +75,9 @@
                 android:id="@+id/tv_repository_star"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_vertical_material"
-                android:layout_marginBottom="@dimen/margin_vertical_material"
-                android:layout_marginStart="@dimen/margin_horizontal_material"
+                android:layout_marginTop="@dimen/single_margin_vertical_material"
+                android:layout_marginBottom="@dimen/single_margin_vertical_material"
+                android:layout_marginStart="@dimen/single_margin_horizontal_material"
                 android:drawableStart="@mipmap/ic_star_rate_black_18dp"
                 android:text="@{String.valueOf(repoVo.stars)}"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -90,9 +90,9 @@
                 android:id="@+id/tv_repository_forked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_vertical_material"
-                android:layout_marginBottom="@dimen/margin_vertical_material"
-                android:layout_marginStart="@dimen/margin_horizontal_material"
+                android:layout_marginTop="@dimen/single_margin_vertical_material"
+                android:layout_marginBottom="@dimen/single_margin_vertical_material"
+                android:layout_marginStart="@dimen/single_margin_horizontal_material"
                 android:drawableStart="@mipmap/ic_star_rate_black_18dp"
                 android:text="@{String.valueOf(repoVo.forks)}"
                 app:layout_constraintBottom_toBottomOf="parent"
