--- a/modules/repository/src/main/res/layout/activity_repo_deatil.xml
+++ b/modules/repository/src/main/res/layout/activity_repo_deatil.xml
@@ -18,7 +18,8 @@
             android:id="@+id/vp_repo_content"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tl_repo_title"
+            app:layout_constraintTop_toBottomOf="@+id/tl_repo_title"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
