--- a/modules/repository/src/main/res/layout/fragment_file_content.xml
+++ b/modules/repository/src/main/res/layout/fragment_file_content.xml
@@ -12,9 +12,16 @@
             type="LiveData&lt;Resource&lt;FileContent>>" />
     </data>
 
-    <WebView
-        android:id="@+id/web_view"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:fileContent="@{fileContent.data}"/>
+        >
+        <WebView
+            android:id="@+id/web_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:fileContent="@{fileContent.data}"/>
+
+    </androidx.core.widget.NestedScrollView>
+
 </layout>
