update markdown process

--- a/modules/repository/src/main/res/layout/fragment_file_content.xml
+++ b/modules/repository/src/main/res/layout/fragment_file_content.xml
@@ -16,11 +16,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-        <WebView
+        <TextView
             android:id="@+id/web_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:fileContent="@{fileContent.data}"/>
+            app:md="@{fileContent.data.content}"/>
 
     </androidx.core.widget.NestedScrollView>
 
