--- a/modules/repository/src/main/res/layout/fragment_file_content.xml
+++ b/modules/repository/src/main/res/layout/fragment_file_content.xml
@@ -12,16 +12,10 @@
             type="LiveData&lt;Resource&lt;FileContent>>" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_file_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
-        <TextView
-            android:id="@+id/web_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:md="@{fileContent.data.content}"/>
-
-    </androidx.core.widget.NestedScrollView>
+        app:md="@{fileContent.data.content}"/>
 
 </layout>
