--- a/modules/repository/src/main/res/layout/activity_repo_deatil.xml
+++ b/modules/repository/src/main/res/layout/activity_repo_deatil.xml
@@ -18,6 +18,7 @@
             android:id="@+id/vp_repo_content"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:filterTouchesWhenObscured="true"
             app:layout_constraintTop_toBottomOf="@+id/tl_repo_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
