--- a/baselib/res/src/main/res/values/dimens.xml
+++ b/baselib/res/src/main/res/values/dimens.xml
@@ -14,6 +14,10 @@
     <dimen name="common_icon_width_material">48dp</dimen>
     <dimen name="content_margin_horizontal_material">72dp</dimen>
 
+    <!--  toolbar  -->
+    <dimen name="toolbar_collapsing_content">192dp</dimen>
+
+
     <!--button dimens-->
     <dimen name="button_min_height_material">48dp</dimen>
     <dimen name="button_min_width_material">88dp</dimen>
