--- a/modules/repository/src/main/res/layout/collasing_repo_detail.xml
+++ b/modules/repository/src/main/res/layout/collasing_repo_detail.xml
@@ -1,10 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tool="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_collapsing_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/margin_horizontal_material"
+        android:paddingEnd="@dimen/margin_horizontal_material"
+        android:minHeight="@dimen/toolbar_collapsing_content"
         android:background="?attr/colorPrimaryLight">
+
+        <TextView
+            android:id="@+id/tv_repository_desc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/text_view_min_height_material"
+            android:maxLines="4"
+            android:ellipsize="end"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tool:text="Android构建工具集：包含快速实现组件化构建脚本，快速实现屏幕最小宽度适配脚本"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_repo_tag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_vertical_material"
+            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
+            app:layout_constraintTop_toBottomOf="@+id/tv_repository_desc"
+            />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
