--- a/modules/repository/src/main/res/layout/collasing_repo_detail.xml
+++ b/modules/repository/src/main/res/layout/collasing_repo_detail.xml
@@ -6,34 +6,118 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/margin_horizontal_material"
-        android:paddingEnd="@dimen/margin_horizontal_material"
+        android:background="?attr/colorPrimaryLight"
         android:minHeight="@dimen/toolbar_collapsing_content"
-        android:background="?attr/colorPrimaryLight">
+        android:paddingStart="@dimen/margin_horizontal_material"
+        android:paddingEnd="@dimen/margin_horizontal_material">
+
+        <TextView
+            android:id="@+id/tv_forks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@mipmap/ic_watch"
+            android:gravity="center_vertical"
+            android:text="@string/forks"
+            android:textSize="@dimen/text_size_body_2_material"
+            android:drawablePadding="@dimen/padding_vertical_material"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_watch"
+            app:layout_constraintEnd_toEndOf="@+id/tv_forks_num"
+            app:layout_constraintStart_toStartOf="@+id/tv_forks_num"
+            app:layout_constraintTop_toTopOf="@+id/tv_watch"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/tv_repository_desc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/text_view_min_height_material"
-            android:maxLines="4"
             android:ellipsize="end"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:maxLines="4"
             app:layout_constraintEnd_toEndOf="parent"
-            tool:text="Android构建工具集：包含快速实现组件化构建脚本，快速实现屏幕最小宽度适配脚本"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tool:text="Android构建工具集：包含快速实现组件化构建脚本，快速实现屏幕最小宽度适配脚本" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_repo_tag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_vertical_material"
+            android:orientation="horizontal"
             app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
-            app:layout_constraintTop_toBottomOf="@+id/tv_repository_desc"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/tv_repository_desc" />
 
 
+        <TextView
+            android:id="@+id/tv_watch_num"
+            style="@style/TextAppearance.Adaptive.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:maxWidth="@dimen/button_min_width_material"
+            android:layout_marginTop="@dimen/margin_vertical_material"
+            app:layout_constraintTop_toBottomOf="@id/rv_repo_tag"
+            app:layout_constraintEnd_toStartOf="@+id/tv_star_num"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            tool:text="10000000000000" />
+
+        <TextView
+            android:id="@+id/tv_star_num"
+            style="@style/TextAppearance.Adaptive.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:maxWidth="@dimen/button_min_width_material"
+            app:layout_constraintEnd_toStartOf="@+id/tv_forks_num"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tv_watch_num"
+            app:layout_constraintTop_toTopOf="@+id/tv_watch_num"
+            tool:text="20000000000000" />
+
+        <TextView
+            android:id="@+id/tv_forks_num"
+            style="@style/TextAppearance.Adaptive.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:maxWidth="@dimen/button_min_width_material"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tv_star_num"
+            app:layout_constraintTop_toTopOf="@+id/tv_watch_num"
+            tool:text="30000000000000" />
+
+        <TextView
+            android:id="@+id/tv_watch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_vertical_material"
+            android:drawableStart="@mipmap/ic_watch"
+            android:gravity="center_vertical"
+            android:text="@string/watch"
+            android:drawablePadding="@dimen/padding_vertical_material"
+            android:textSize="@dimen/text_size_body_2_material"
+            app:layout_constraintEnd_toEndOf="@+id/tv_watch_num"
+            app:layout_constraintStart_toStartOf="@+id/tv_watch_num"
+            app:layout_constraintTop_toBottomOf="@+id/tv_watch_num" />
+
+        <TextView
+            android:id="@+id/tv_star"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@mipmap/ic_watch"
+            android:gravity="center_vertical"
+            android:text="@string/star"
+            android:textSize="@dimen/text_size_body_2_material"
+            android:drawablePadding="@dimen/padding_vertical_material"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_watch"
+            app:layout_constraintEnd_toEndOf="@+id/tv_star_num"
+            app:layout_constraintStart_toStartOf="@+id/tv_star_num"
+            app:layout_constraintTop_toTopOf="@+id/tv_watch" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
