--- a/baselib/res/src/main/res/values/dimens.xml
+++ b/baselib/res/src/main/res/values/dimens.xml
@@ -42,4 +42,11 @@
     <dimen name="text_size_h3_material">48sp</dimen>
     <dimen name="text_size_h2_material">60sp</dimen>
     <dimen name="text_size_h1_material">96sp</dimen>
+
+    <!--  icon dimens  -->
+    <dimen name="icon_xxhdpi">48dp</dimen>
+    <dimen name="icon_xhdpi">36dp</dimen>
+    <dimen name="icon_hdpi">24dp</dimen>
+    <dimen name="icon_mdpi">18dp</dimen>
+
 </resources>
