--- a/baselib/github_base/src/main/res/layout/loading_state.xml
+++ b/baselib/github_base/src/main/res/layout/loading_state.xml
@@ -23,6 +23,7 @@
         <import type="com.tangpj.recurve.resource.Status"/>
         <import type="kotlin.Unit"/>
         <import type="kotlin.jvm.functions.Function0"/>
+        <import type="android.text.TextUtils"/>
 
         <variable name="resource" type="Resource"/>
         <variable name="callback" type="Function0&lt;Unit>"/>
@@ -49,8 +50,8 @@
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/error_msg"
-            android:text="@{resource.networkState.msg ?? @string/unknown_error}"
-            app:visibleGone="@{resource.networkState.status == Status.ERROR}"
+            android:text="@{resource.networkState.msg ?? (resource.data == null ? @string/error_response_is_null : @string/unknown_error)}"
+            app:visibleGone="@{resource.networkState.status == Status.ERROR || resource.data == null}"
             tools:visibility="visible"/>
     </LinearLayout>
 </layout>
