--- a/modules/repository/src/main/res/layout/item_file.xml
+++ b/modules/repository/src/main/res/layout/item_file.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tool="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="fileItem"
+            type="com.tangpj.repository.vo.FileItem" />
+    </data>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -9,8 +15,11 @@
         android:drawablePadding="@dimen/margin_horizontal_material"
         android:layout_marginTop="@dimen/margin_vertical_material"
         android:layout_marginBottom="@dimen/margin_vertical_material"
-        android:drawableStart="@drawable/ic_folder_black_24dp"
+        android:gravity="center_vertical"
+        android:drawableStart="@{fileItem.fileIconId}"
+        android:text="@{fileItem.name}"
         tool:text="README.md"
+        tool:drawableStart="@drawable/ic_folder"
         style="@style/TextAppearance.Adaptive.Body2" />
 
 </layout>
