--- a/baselib/res/src/main/res/layout/fragment_navigation.xml
+++ b/baselib/res/src/main/res/layout/fragment_navigation.xml
@@ -9,6 +9,7 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         app:navGraph="@navigation/navigation_oauth2"
         app:defaultNavHost="true"
         />
