update repo navigation

--- a/modules/repository/src/main/res/navigation/navigation_repositories.xml
+++ b/modules/repository/src/main/res/navigation/navigation_repositories.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_repositories"
-    app:startDestination="@+id/repositories"    >
+    app:startDestination="@+id/repositories"
+    tools:ignore="UnusedNavigation">
 
     <fragment android:id="@+id/repositories"
         android:name="com.tangpj.repository.ui.repositories.RepoFragment"
-        android:label="RepositoriesFragment">
+        android:label="RepositoriesFragment"
+        tools:layout="@layout/fragment_base_recycler_view"
+        >
 
         <argument
             android:name="login"
