--- a/modules/repository/src/main/res/navigation/navigation_repo_detail.xml
+++ b/modules/repository/src/main/res/navigation/navigation_repo_detail.xml
@@ -3,13 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation_repo_detail"
+    app:startDestination="@id/filesScreen"
     tools:ignore="UnusedNavigation">
 
-    <fragment android:id="@+id/files">
+    <fragment android:id="@+id/filesScreen"
+        android:name="com.tangpj.repository.ui.detail.fileContent.FileContentFragment"
+        android:label="FileContentFragment"
+        tools:layout="@layout/fragment_file_content"
+        >
 
         <argument
-            android:name="filesQuery"
-            app:argType="com.tangpj.repository.valueObject.query.GitObjectQuery"/>
+            android:name="repoDetailQuery"
+            android:defaultValue="@null"
+            app:nullable="true"
+            app:argType="com.tangpj.repository.valueObject.query.RepoDetailQuery"/>
+
+        <argument
+            android:name="branch"
+            android:defaultValue="master"
+            app:argType="string"
+            />
+
+        <argument
+            android:name="path"
+            android:defaultValue="README.md"
+            app:argType="string"/>
+
+        <action
+            android:id="@+id/file_content_init"
+            app:destination="@+id/filesScreen"/>
 
     </fragment>
 
